--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,39 @@
-cmake_minimum_required(VERSION 3.2.2)
+cmake_minimum_required( VERSION 3.2.2 )
+project( ase )
 
-project(ase)
+### Standard
+set( CMAKE_CXX_STANDARD 11 )
+set( CMAKE_CXX_STANDARD_REQUIRED ON )
+set( CMAKE_CXX_EXTENSIONS OFF )
 
-include_directories(include)
+### Verbosity
+set( CMAKE_COLOR_MAKEFILE ON )
+set( CMAKE_VERBOSE_MAKEFILE ON )
 
-file(GLOB_RECURSE SOURCE_FILES source/*.cpp)
+### Optimizations
+if( "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang|GNU" )
+	add_compile_options( -O2 )
+	add_compile_options( -Wall )
+	add_compile_options( -Wextra )
+elseif( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" )
+	add_compile_options( /W4 )
+endif()
 
-set(CMAKE_CXX_STANDARD 11)
+include_directories( include )
 
-add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
+### Targets
+add_library(
+	${PROJECT_NAME} STATIC
+	source/ase/ase.cpp
+)
 
-set_target_properties(${PROJECT_NAME}
-                      PROPERTIES POSITION_INDEPENDENT_CODE ON)
+set_target_properties(
+	${PROJECT_NAME}
+	PROPERTIES POSITION_INDEPENDENT_CODE ON
+)
 
-set(${PROJECT_NAME}_INCLUDE_DIRS 
+set(
+	${PROJECT_NAME}_INCLUDE_DIRS 
     ${PROJECT_SOURCE_DIR}/include
-    CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
+    CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE
+)
